refactor: tests for improved readability and consistency